frontends/leptos/tests/snapshots/snapshots__snap_event_agent_error.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="agent_error" data-event-kind="error" class="block block-error"><span class="block-label">agent_error</span><pre class="block-body">something exploded</pre></div>
