frontends/leptos/tests/snapshots/snapshots__snap_event_assistant_html_is_escaped.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="llm_response" data-event-kind="assistant" class="block block-assistant"><span class="block-label">assistant</span><div data-testid="leptos-assistant-text"><div data-testid="md-body" class="block-body md-body"><p>hello &lt;script&gt;alert(1)&lt;/script&gt;</p>
</div></div><span data-testid="leptos-assistant-usage" class="block-meta">in: 10  out: 5  (end_turn)</span></div>
