frontends/leptos/tests/snapshots/snapshots__snap_event_assistant_mermaid.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="llm_response" data-event-kind="assistant" class="block block-assistant"><span class="block-label">assistant</span><div data-testid="leptos-assistant-text"><div data-testid="md-body" class="block-body md-body"><pre><code class="language-mermaid">graph LR
  A --&gt; B
</code></pre>
</div></div><span data-testid="leptos-assistant-usage" class="block-meta">in: 10  out: 5  (end_turn)</span></div>
