frontends/leptos/tests/snapshots/snapshots__snap_event_assistant_plain_text.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="text_block" data-event-kind="assistant" class="block block-assistant"><span class="block-label">Assistant</span><div data-testid="leptos-assistant-text"><div data-testid="md-body" class="block-body md-body"><p>plain assistant text</p>
</div></div><button title="Click to copy: 2025-01-01T00:00:01.000Z" class="block-timestamp">00:00:01.000</button></div>
