frontends/leptos/tests/snapshots/snapshots__snap_event_context_compacted.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="context_compacted" data-event-kind="status" class="block block-status"><span class="block-label">Context compacted</span><span class="block-body">before: 80000 tokens → after: 500 tokens (summary: 300 tokens)</span><button title="Click to copy: 2025-01-01T00:00:01.750Z" class="block-timestamp">00:00:01.750</button></div>
