frontends/leptos/tests/snapshots/snapshots__snap_event_llm_call.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="llm_call" data-event-kind="status" class="block block-status"><div class="block-label-row"><span class="block-label">LLM call</span><span data-testid="leptos-llm-call-summary" class="block-meta">2 ctx · 1234 bytes</span><button data-testid="leptos-llm-call-open-modal" class="block-label-row-btn">context</button><button data-testid="leptos-llm-call-payload" class="block-label-row-btn">payload</button></div><span class="block-timestamp">00:00:01</span></div>
