frontends/leptos/tests/snapshots/snapshots__snap_event_llm_response_discarded_with_partial_count.snap
---
source: tests/snapshots.rs
expression: html
---
<div data-testid="leptos-event-block" data-event-type="llm_response_discarded" data-event-kind="status" class="block block-status"><span class="block-label">assistant</span><span class="block-body block-discarded">[response discarded]</span><span data-testid="leptos-partial-block-count" class="block-meta">3 partial blocks</span><button title="Click to copy: 2025-01-01T00:00:01.000Z" class="block-timestamp">00:00:01.000</button></div>
